validate when clicking "Accept" when editing alert

--- a/src/app/alerts/alert-edit/alert-edit.template.html
+++ b/src/app/alerts/alert-edit/alert-edit.template.html
@@ -6,12 +6,12 @@
   </h2>
   <div class="usa-grid-full">
     <div class="usa-width-one-half">
-      <samSelect [required]='true' [control]="form.get('severity')" formControlName="severity" class='severity-select' [options]="typeOptions" [name]="'alert-types'" [label]="'Type'"></samSelect>
-      <samText [maxlength]="70" [control]="form.get('title')" formControlName="title" [required]='true' [name]="'title-input'" [label]="'Title'"></samText>
-      <samTextArea [maxlength]="350" [control]="form.get('description')" formControlName="description" [required]='true' [name]="'description'" [label]="'Description'"></samTextArea>
+      <samSelect #severity [required]='true' [control]="form.get('severity')" formControlName="severity" class='severity-select' [options]="typeOptions" [name]="'alert-types'" [label]="'Type'"></samSelect>
+      <samText #title [maxlength]="70" [control]="form.get('title')" formControlName="title" [required]='true' [name]="'title-input'" [label]="'Title'"></samText>
+      <samTextArea #description [maxlength]="350" [control]="form.get('description')" formControlName="description" [required]='true' [name]="'description'" [label]="'Description'"></samTextArea>
     </div>
     <div class="usa-width-one-half">
-      <samDateTime [control]="form.get('publishedDate')" formControlName="publishedDate" [label]="'Publish Date'" name='publish-date'></samDateTime>
+      <samDateTime #publishedDate [control]="form.get('publishedDate')" formControlName="publishedDate" [label]="'Publish Date'" name='publish-date'></samDateTime>
       <div>
         <input id="publish-immediately" type="checkbox" formControlName="publishImmediately" (click)="onPublishImmediatelyClick($event.target.checked)">
         <label for="publish-immediately">Publish Immediately</label>
@@ -25,7 +25,7 @@
   </div>
   <div class="alert-edit-actions clearfix">
     <div class="pull-right">
-      <button class="alert-confirm-button" type="button" (click)="onAcceptClick($event)" [ngClass]="acceptButtonStyle()">Confirm</button>
+      <button class="usa-button-primary" type="button" (click)="onAcceptClick($event)">Confirm</button>
       <button type="button" class="usa-button-outline" (click)="onCancelClick($event)">Cancel</button>
     </div>
   </div>
