--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -5,10 +5,10 @@
     <div>&nbsp;</div>
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
-      <ng-container *ngIf="errorOrganization || !logoUrl">
+      <ng-container *ngIf="program && (errorOrganization || !logoUrl)">
         <img src="src/assets/img/logo-not-available.png" class="logo" alt="Logo Not Available">
       </ng-container>
-      <ng-container *ngIf="logoUrl && !errorOrganization">
+      <ng-container *ngIf="program && logoUrl && !errorOrganization">
         <img class="logo" id="program-logo" [src]="logoUrl" alt="HTML5 Icon">
       </ng-container>
       <!--Side Navigation-->
