BROKEN, allow three states for dates and time: clean, invalid, valid

--- a/src/app/alerts/alert-edit/alert-edit.template.html
+++ b/src/app/alerts/alert-edit/alert-edit.template.html
@@ -29,6 +29,6 @@
       <button type="button" class="usa-button-outline" (click)="onCancelClick($event)">Cancel</button>
     </div>
   </div>
-  <!--<div><pre><code>valid: {{form.valid | json}}</code></pre></div>-->
-  <!--<div><pre><code>value: {{form.value | json}}</code></pre></div>-->
+  <div><pre><code>valid: {{form.valid | json}}</code></pre></div>
+  <div><pre><code>value: {{form.value | json}}</code></pre></div>
 </form>
