--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -348,12 +348,12 @@
 <div class="usa-grid">
   <h1>DateTime &lt;samDateTime&gt;</h1>
   <samDateTime name="example-date" [(value)]="dateTime"></samDateTime>
-  <p>{{dateTime}}</p>
+  <p>{{dateTime | json}}</p>
 </div>
 <div class="usa-grid">
   <h1>Time &lt;samTime&gt;</h1>
   <samTime name="example-time" [(value)]="time"></samTime>
-  <p>{{time}}</p>
+  <p>{{time | json}}</p>
 </div>
 <div class="usa-grid">
   <h2 class="usa-width-one">Date Entry &lt;samDate&gt;</h2>
