--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -1,7 +1,7 @@
 <div class="usa-grid opportunity-page">
 
   <!--Sidebar-->
-  <aside *ngIf="ready" class="usa-width-one-fourth">
+  <aside class="usa-width-one-fourth">
     <br />
     <br />
     <div sam-sticky limit=1200 container="occupy-page">
@@ -15,7 +15,7 @@
       <!--Side Navigation-->
       <nav *ngIf="currentTab == 'Opportunity'">
         <ul class="usa-sidenav-list">
-          <li *ngIf="shouldBeDisplayed(opportunityFields.Award)"><a href="{{ currentUrl + '#' + generateID(opportunityFields.Award) }}">Award Details</a></li>
+          <li *ngIf="shouldBeDisplayed(opportunityFields.Award) && ready"><a href="{{ currentUrl + '#' + generateID(opportunityFields.Award) }}">Award Details</a></li>
           <li *ngIf="shouldBeDisplayed(opportunityFields.General)"><a href="{{ currentUrl + '#' + generateID(opportunityFields.General) }}">General Information</a></li>
           <li *ngIf="shouldBeDisplayed(opportunityFields.Classification)"><a href="{{ currentUrl + '#' + generateID(opportunityFields.Classification) }}">Classification</a></li>
           <li *ngIf="shouldBeDisplayed(opportunityFields.Synopsis)"><a href="{{ currentUrl + '#' + generateID(opportunityFields.Synopsis) }}">Synopsis/Description</a></li>
@@ -40,7 +40,7 @@
   </aside>
 
   <!--Main Content-->
-  <div class="usa-width-three-fourths" *ngIf="opportunity && ready">
+  <div class="usa-width-three-fourths" *ngIf="opportunity">
     <section [attr.id]="generateID(opportunityFields.Header)" *ngIf="shouldBeDisplayed(opportunityFields.Header)">
       <h1 [attr.id]="generateID(opportunityFields.Title, 'header')" *ngIf="shouldBeDisplayed(opportunityFields.Title)">
         {{ opportunity.data?.title }}
@@ -71,7 +71,7 @@
     <samTabs (currentSelectedTab)="currentTabSelected($event)">
       <samTab tabTitle="Opportunity" (tabSelected)="tabSelected($event)">
 
-        <section [attr.id]="generateID(opportunityFields.Award)" *ngIf="shouldBeDisplayed(opportunityFields.Award)">
+        <section [attr.id]="generateID(opportunityFields.Award)" *ngIf="shouldBeDisplayed(opportunityFields.Award) && ready">
           <h2>Award Details</h2>
           <ul class="usa-unstyled-list">
             <li [attr.id]="generateID(opportunityFields.AwardDate)"
