--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -6,7 +6,7 @@
     <br />
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
-      <ng-container *ngIf="opportunity && (errorOrganization || !logoUrl)">
+      <ng-container *ngIf="opportunity && (errorOrganization || logoUrl===null || errorLogo)">
         <img src="src/assets/img/logo-not-available.png" class = "logo" alt="Logo Not Available">
       </ng-container>
       <ng-container *ngIf="opportunity && logoUrl && !errorOrganization">
