Consistent logo size

--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -4,8 +4,8 @@
     <div class="clearfix">
       <div class="logo-section">
         <!-- Logo -->
-        <img *ngIf="organization && logoUrl && !errorLogo" class="logo" [src]="logoUrl" alt="HTML5 Icon">
-        <img *ngIf="organization && (errorOrganization || errorLogo || logoUrl===null)" src="src/assets/img/logo-not-available.png" class="logo" alt="Logo Not Available">
+        <img *ngIf="organization && logoUrl && !errorLogo" class="sidenav-logo" [src]="logoUrl" alt="HTML5 Icon">
+        <img *ngIf="organization && (errorOrganization || errorLogo || logoUrl===null)" src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available">
       </div>
       <div class="intro-section" *ngIf="organization" >
         <h1>{{organization.agencyName || organization.name || organization.orgKey}}</h1>
