--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -6,10 +6,10 @@
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
       <ng-container *ngIf="program && (errorOrganization || logoUrl===null || errorLogo)">
-        <img src="src/assets/img/logo-not-available.png" class="logo" alt="Logo Not Available">
+        <img src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available">
       </ng-container>
       <ng-container *ngIf="program && logoUrl && !errorOrganization">
-        <img class="logo" id="program-logo" [src]="logoUrl" alt="HTML5 Icon">
+        <img class="sidenav-logo" id="program-logo" [src]="logoUrl" alt="HTML5 Icon">
       </ng-container>
       <!--Side Navigation-->
       <nav>
