--- a/src/styles/pages/_organization.scss
+++ b/src/styles/pages/_organization.scss
@@ -10,11 +10,11 @@
   }
 
   .logo-section{
-    width: 80%;
+    width: 100%;
     @media (min-width: 600px) {
-      width: 15%;
+      width: 160px;
+      margin-right: 20px;
     }
-    margin-right: 20px;
     img{
       margin-top: 50px;
     }
@@ -22,7 +22,10 @@
   .logo-section + div{
     width: 100%;
     @media (min-width: 600px) {
-      width: 80%;
+      width: 60%;
+    }
+    @media (min-width: 900px) {
+      width: 75%;
     }
     h1{
       margin-top: 0px !important;
