--- a/src/app/authentication/profile/password-reset/password-reset.component.html
+++ b/src/app/authentication/profile/password-reset/password-reset.component.html
@@ -1,6 +1,6 @@
 <h2>Reset Password</h2>
 <div>
-  <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="reset()" class="usa-form usa-form-password" autocomplete="off">
+  <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="reset()" class="usa-form-large usa-form-password" autocomplete="off">
     <fieldset>
       <sam-password [password]="passwordForm.controls.userPassword"></sam-password>
     </fieldset>
