- Fixed error visibility timing - Fixed checkbox toggle and retoggle issues

--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -1,7 +1,7 @@
 <div class="usa-password">
   <div class="usa-grid">
     <div class="usa-width-one-whole">
-      <div class="usa-form-large">
+      <div class="usa-form-large form-group" [ngClass]="$formState()">
         <fieldset>
           <div>
             <labelWrapper label="Create Password" required="true">
@@ -12,9 +12,8 @@
                      [formControl]="password" />
             </labelWrapper>
           </div>
-
-          <div>
-            <labelWrapper [errorMessage]="states.error" label="Confirm Password" required="true">
+          <div [ngClass]="getFormControlStates('passwordConfirm')">
+            <labelWrapper [errorMessage]="passwordConfirm.touched ? states.error : ''" label="Confirm Password" required="true">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="passwordConfirm"
                      readonly="readonly"
@@ -24,7 +23,10 @@
           </div>
 
           <p class="usa-form-note">
-            <input type="checkbox" id="usa-password-toggle" (click)="states.toggle = !states.toggle">
+            <input type="checkbox"
+                   id="usa-password-toggle"
+
+                   (change)="states.toggle = !states.toggle">
             <label for="usa-password-toggle">Toggle password</label>
           </p>
         </fieldset>
@@ -32,19 +34,19 @@
           <ul>
             <li class="header">Passwords must:</li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="(states.validations.minlength ? config.icons.valid : config.icons.invalid)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.minlength)"></span></div>
               <span [innerHTML]="config.messages.minlength"></span>
             </li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="(states.validations.uppercase ? config.icons.valid : config.icons.invalid)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.uppercase)"></span></div>
               <span [innerHTML]="config.messages.uppercase"></span>
             </li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="(states.validations.numeric ? config.icons.valid : config.icons.invalid)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.numeric)"></span></div>
               <span [innerHTML]="config.messages.numeric"></span>
             </li>
             <li>
-              <div class="icon"><span class="fa" [ngClass]="(states.validations.special ? config.icons.valid : config.icons.invalid)"></span></div>
+              <div class="icon"><span class="fa" [ngClass]="$formState(states.validations.special)"></span></div>
               <span [innerHTML]="config.messages.special"></span>
             </li>
           </ul>
