- Upgrade `AlertComponent` close button positioning - Align `AlertComponent` heading with icon
- Add success alert to password reset page

--- a/src/styles/components/_alert.scss
+++ b/src/styles/components/_alert.scss
@@ -4,6 +4,14 @@
 
 .usa-alert {
   display: inline-block;
+  padding-right: 2.5em;
+  position: relative;
+}
+
+.usa-alert-heading {
+  margin-top: 0em;
+  margin-bottom: 0em;
+  line-height: 2em;
 }
 
 .usa-alert-body {
@@ -11,5 +19,10 @@
 }
 
 .usa-alert-close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1.3em;
+  line-height: 1;
   cursor: pointer;
 }
