--- a/src/app/authentication/profile/password-reset/password-reset.component.html
+++ b/src/app/authentication/profile/password-reset/password-reset.component.html
@@ -12,6 +12,9 @@
   </form>
 </div>
 
-<samAlert type="info"
-          title="Migrate Your Roles"
-          description="If you have a user account at any of the websites that are moving to the new SAM.gov, you may migrate your roles and keep your same permissions. Begin Now."></samAlert>
+<samAlert class="usa-alert-static" type="info" title="Migrate Your Roles">
+  If you have a user account at any of the <a [href]="config.alert.sites">websites</a> that are moving to the new SAM.gov,
+  you may migrate your roles and keep your same permissions. <a [href]="config.alert.migrate">Begin Now</a>.
+</samAlert>
+
+<samAlert type="success" title="Password Successfully Reset" showClose="true" [dismissTimer]="1000"></samAlert>
