- Implement forgot password UI

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -39,7 +39,7 @@
 
           <div class="usa-grid usa-links">
             <div class="usa-width-one-half text-center">
-              <a href="javascript:void(0);" title="Forgot Password?">Forgot Password?</a>
+              <a title="Forgot Password?" routerLink="/forgot">Forgot Password?</a>
             </div>
             <div class="usa-width-one-half text-center">
               <a title="Sign Up" routerLink="/signup">Sign Up</a>
