--- a/src/styles/components/_authentication.scss
+++ b/src/styles/components/_authentication.scss
@@ -2,6 +2,7 @@
 @import 'authentication/shared/password';
 
 @import 'authentication/login';
+@import 'authentication/forgot';
 @import 'authentication/register';
 @import 'authentication/profile';
 
