--- a/src/styles/components/authentication/_forgot.scss
+++ b/src/styles/components/authentication/_forgot.scss
@@ -1,9 +1,9 @@
-.usa-register {
-  &.usa-register {
+.usa-forgot {
+  &.usa-forgot {
     margin-bottom: 94px;
   }
 
-  .usa-register-init {
+  .usa-forgot-init {
     width: 460px;
     margin: 0 auto;
 
@@ -65,8 +65,8 @@
     }
   }
 
-  .usa-register {
-    &.usa-register-initial {
+  .usa-forgot {
+    &.usa-forgot-initial {
       display: block;
       width: 440px;
       max-width: 100%;
@@ -74,7 +74,7 @@
     }
   }
 
-  .usa-form-register {
+  .usa-form-forgot {
     max-width: 100%;
 
     .usa-button-controls {
