- Hookup 2/3 for forgot password

--- a/src/app/authentication/forgot/forgot-confirm.component.html
+++ b/src/app/authentication/forgot/forgot-confirm.component.html
@@ -1,7 +1,7 @@
 <div class="usa-grid">
   <div class="usa-width-one-whole">
     <span class="usa-forgot usa-forgot-initial text-center">
-      <legend class="usa-legend">Email Sent.</legend>
+      <legend class="usa-legend">Email Sent</legend>
       <div *ngIf="email">We just sent an email to {{ email }}.</div>
 
       <section>
@@ -12,7 +12,7 @@
           <li>Reset your password</li>
         </ul>
 
-        <p class="text-center">The password reset link will remain valid for 20 minutes.</p>
+        <p>The password reset link will remain valid for 20 minutes.</p>
 
         <ul class="links">
           <li *ngIf="email" class="email">
