--- a/src/styles/components/authentication/_forgot.scss
+++ b/src/styles/components/authentication/_forgot.scss
@@ -68,7 +68,7 @@
   .usa-forgot {
     &.usa-forgot-initial {
       display: block;
-      width: 440px;
+      width: 420px;
       max-width: 100%;
       margin: 0 auto;
     }
@@ -84,7 +84,7 @@
   }
 
   section {
-    width: 380px;
+    //width: 380px;
     margin: 0 auto;
   }
 
@@ -95,7 +95,7 @@
     list-style: none;
 
     li {
-      margin-left: 2.5rem;
+      margin-left: 1.4rem;
       font-size: 2rem;
       text-align: left;
 
