--- a/src/app/authentication/forgot/forgot-initial.component.html
+++ b/src/app/authentication/forgot/forgot-initial.component.html
@@ -6,23 +6,19 @@
           <h2>Forgot Password?</h2>
           <span>Enter your email address below and we will send you instructions to reset your password.</span>
 
-          <div [ngClass]="{ 'usa-input-error': states.submitted && (email.invalid || states.error) }">
-            <label for="email">Email</label>
-            <span class="usa-input-error-message" *ngIf="states.submitted && (email.invalid || states.error.length)" role="alert">
-              <span *ngIf="states.error.length">{{ states.error }}</span>
-              <span *ngIf="email.errors && email.errors.email">Enter a valid email address</span>
-            </span>
+          <labelWrapper [errorMessage]="email.touched ? states.error : ''" label="Email">
             <input type="text"
                    id="email"
                    name="email"
                    autocomplete="off"
                    readonly="readonly"
                    onfocus="this.removeAttribute('readonly');"
-                   [formControl]="email"/>
-          </div>
+                   (keyup)="validate"
+                   [formControl]="email" />
+          </labelWrapper>
 
           <div class="usa-button-controls">
-            <button type="submit">Submit</button>
+            <button type="submit" [disabled]="states.disabled">Submit</button>
           </div>
 
           <hr />
