added changes to table rows and columns for 508 compl

--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -9,7 +9,7 @@
         <img src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available">
       </ng-container>
       <ng-container *ngIf="program && logoUrl && !errorOrganization">
-        <img class="sidenav-logo" id="program-logo" [src]="logoUrl" alt="HTML5 Icon">
+        <img class="sidenav-logo" id="program-logo" [src]="logoUrl" alt="Program Logo">
       </ng-container>
       <!--Side Navigation-->
       <nav>
