--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -10,7 +10,7 @@
         <img src="src/assets/img/logo-not-available.png" class="sidenav-logo" alt="Logo Not Available">
       </ng-container>
       <ng-container *ngIf="opportunity && logoUrl && !errorOrganization">
-        <img class="sidenav-logo" [src]="logoUrl" alt="HTML5 Icon">
+        <img class="sidenav-logo" [src]="logoUrl" alt="Program Logo">
       </ng-container>
       <!--Side Navigation-->
       <nav *ngIf="currentTab == 'Opportunity'">
