--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -1,8 +1,6 @@
 <div class="usa-grid">
   <h2>AlphaBet Selector Component &lt;sam-alphabet-selector&gt;</h2>
-  <samLabel [labelType]="'small'" [labelText]="'Data Size'"></samLabel><input [(ngModel)]="searchResultData.size" type="number">
-  <sam-alphabet-selector [sortLabel]="'LastName'" [dataSize]="searchResultData.size" (onDataRangeChange)="onRangeChange($event)"></sam-alphabet-selector>
-  <span *ngIf="curRange !== null">Data Range: {{curRange.start}} - {{curRange.end}}</span>
+  <sam-alphabet-selector [sortLabel]="'LastName'"></sam-alphabet-selector>
 </div>
 
 <div class="usa-grid">
