--- a/src/styles/components/_alphabet-selector.scss
+++ b/src/styles/components/_alphabet-selector.scss
@@ -1,14 +1,49 @@
 .alphabet-selector{
-  .current-range-link{
+  .current-prefix{
     text-decoration: none;
-    color: $color-black;
+    color: $color-white;
+    background-color: $color-cool-blue;
+    border-radius: 3px;
+    text-align: center;
+    padding: 0 3px;
   }
 
-  .current-range-link:hover{
+  .current-prefix:hover{
     cursor: auto;
   }
 
-  .normal-range-link:hover{
+  .normal-prefix:hover{
     cursor: pointer;
   }
+
+  .disabled-prefix{
+    color:$color-gray-cool-light;
+    pointer-events: none;
+    text-decoration: none;
+  }
+
+  .prefix-span{
+    width: 35px;
+    display: inline-block;
+  }
+
+  .normal-vertical-line, .current-vertical-line{
+    position: absolute;
+    border-left: 1px solid grey;
+
+    left: 17%;
+  }
+
+  .normal-vertical-line{
+    height: 8px;
+    width: 0;
+    bottom: -20px;
+  }
+
+  .current-vertical-line{
+    height: 8px;
+    width: 0;
+    bottom: -12px;
+  }
+
 }
