add spinner componet, add org-hierarchy component

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -45,6 +45,7 @@
 @import 'pages/new-to-sam';
 @import 'pages/help-accounts';
 @import 'pages/help-roadmap';
+@import 'pages/users-directory';
 
 html, body{
   height: 100%;
