--- a/src/app/user-directory/user-directory.template.html
+++ b/src/app/user-directory/user-directory.template.html
@@ -2,9 +2,13 @@
   <label>Organization Id:</label>
   <input type="number" [(ngModel)]="orgId">
   <hr>
-  <div class="user-details-row"><a href="#">Adams, Chris</a></div>
+  <div class="user-details-row">
+    <h1 class="user-name">
+      <a href="#">Adams, Chris</a>
+    </h1>
+  </div>
   <div class="user-details-row">Phone <a href="tel:+17045024424">(123) 456-7890</a></div>
-  <div class="user-details-row">Organization: General Services Administration (GSA)&nbsp;
+  <div class="user-details-row">Organization: <a [routerLink]="['/organization', orgId]">General Services Administration (GSA)</a>&nbsp;
     <button class="usa-button-transparent org-dropdown-button" (click)="onToggleHierarchyClick()" [disabled]="isToggleButtonDisabled()">
       <span class="sr-only">show hierarchy</span>
       <i class="fa" [ngClass]="toggleButtonClass()"></i>
