--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -13,6 +13,7 @@
 
 @import '~uswds/src/stylesheets/uswds';
 
+@import 'components/parent-orgs.scss';
 @import 'components/date-entry';
 @import 'components/label-wrapper';
 @import 'components/accordion';
