- Rename authenticated reset component name - Implement logic, finished authenticated password reset - Added current password input to password component

--- a/src/app/authentication/profile/details/details.component.html
+++ b/src/app/authentication/profile/details/details.component.html
@@ -99,7 +99,10 @@
   </form>
 </div>
 
-<samAlert type="info" title="Information Status" description="If you have legacy accounts of the 10 systems, you can migrate your privileges"></samAlert>
+<samAlert class="usa-alert-static"
+          type="info"
+          title="Information Status"
+          description="If you have legacy accounts of the 10 systems, you can migrate your privileges"></samAlert>
 
 <samModal #confirmModal
           type="warning"
