--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -3,6 +3,15 @@
     <div class="usa-width-one-whole">
       <div class="usa-form-large form-group" [ngClass]="$formState()">
         <fieldset>
+          <div *ngIf="currentPassword">
+            <labelWrapper label="Current Password" required="true" [errorMessage]="currentPassword.touched && currentPassword.errors ? 'Please enter your current password' : ''">
+              <input type="{{ states.toggle ? 'text' : 'password' }}"
+                     name="currentPassword"
+                     readonly="readonly"
+                     onfocus="this.removeAttribute('readonly');"
+                     [formControl]="currentPassword" />
+            </labelWrapper>
+          </div>
           <div>
             <labelWrapper label="Create Password" required="true">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
@@ -12,20 +21,17 @@
                      [formControl]="password" />
             </labelWrapper>
           </div>
-          <div [ngClass]="getFormControlStates('passwordConfirm')">
-            <labelWrapper [errorMessage]="passwordConfirm.touched ? states.error : ''" label="Confirm Password" required="true">
+          <div [ngClass]="getFormControlStates('confirmPassword')">
+            <labelWrapper label="Confirm Password" required="true" [errorMessage]="confirmPassword.touched ? states.error : ''">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
-                     name="passwordConfirm"
+                     name="confirmPassword"
                      readonly="readonly"
                      onfocus="this.removeAttribute('readonly');"
-                     [formControl]="passwordConfirm" />
+                     [formControl]="confirmPassword" />
             </labelWrapper>
           </div>
-
           <p class="usa-form-note">
             <input type="checkbox"
-                   id="usa-password-toggle"
-
                    (change)="states.toggle = !states.toggle">
             <label for="usa-password-toggle">Toggle password</label>
           </p>
