--- a/src/styles/components/authentication/_profile.scss
+++ b/src/styles/components/authentication/_profile.scss
@@ -1,5 +1,5 @@
 @import './profile/details';
-@import './profile/password-reset';
+@import './profile/reset';
 
 .usa-profile {
   position: relative;
