- Added custom password validation setter to password component - Started authentication service for state handling and shared data store - Started `IAMService` observable subscriptions

--- a/src/app/authentication/forgot/forgot-initial.component.html
+++ b/src/app/authentication/forgot/forgot-initial.component.html
@@ -33,3 +33,9 @@
     </div>
   </div>
 </div>
+
+<samAlert [type]="states.notification.type"
+          [title]="states.notification.title"
+          [description]="states.notification.message"
+          [hidden]="states.notification.show"
+          showClose="true"></samAlert>
