--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -4,7 +4,7 @@
       <div class="usa-form-large form-group" [ngClass]="$formState()">
         <fieldset>
           <div *ngIf="currentPassword">
-            <labelWrapper label="Current Password" required="true" [errorMessage]="currentPassword.touched && currentPassword.errors ? 'Please enter your current password' : ''">
+          <labelWrapper label="Current Password" required="true" [errorMessage]="$currentPasswordErrors()">
               <input type="{{ states.toggle ? 'text' : 'password' }}"
                      name="currentPassword"
                      readonly="readonly"
