--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -2,7 +2,7 @@
 <div>
   <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="reset()" class="usa-form-large usa-form-password" autocomplete="off">
     <fieldset>
-      <sam-password [currentPassword]="passwordForm.controls.currentPassword" [password]="passwordForm.controls.newPassword"></sam-password>
+      <sam-password #passwordEntry [currentPassword]="passwordForm.controls.currentPassword" [password]="passwordForm.controls.newPassword"></sam-password>
     </fieldset>
     <fieldset>
       <div class="usa-button-controls">
@@ -18,7 +18,7 @@
 </samAlert>
 
 <samAlert [type]="states.alert.type"
-          [hidden]="states.alert.show"
           [title]="states.alert.title"
           [description]="states.alert.message"
+          [hidden]="states.alert.show"
           showClose="true"></samAlert>
