--- a/src/styles/components/authentication/profile/_reset.scss
+++ b/src/styles/components/authentication/profile/_reset.scss
@@ -1,5 +1,6 @@
 .usa-profile-password {
   .usa-alert-static {
-    top: -90px !important;
+    top: 16px;
+    transform: translateY(-100%);
   }
 }
