--- a/src/app/authentication/forgot/forgot-initial.component.html
+++ b/src/app/authentication/forgot/forgot-initial.component.html
@@ -29,13 +29,13 @@
             </li>
           </ul>
         </fieldset>
-      </form>
+      </form>{{states.notification.title}}
+      <samAlert [type]="states.notification.type"
+                [title]="states.notification.title"
+                [description]="states.notification.message"
+                [hidden]="!states.notification.show"
+                class="usa-alert-static"
+                showClose="true"></samAlert>
     </div>
   </div>
 </div>
-
-<samAlert [type]="states.notification.type"
-          [title]="states.notification.title"
-          [description]="states.notification.message"
-          [hidden]="states.notification.show"
-          showClose="true"></samAlert>
