--- a/src/styles/components/_alphabet-selector.scss
+++ b/src/styles/components/_alphabet-selector.scss
@@ -12,8 +12,14 @@
     cursor: auto;
   }
 
-  .normal-prefix:hover{
+  .normal-prefix:hover, .pre-selected-prefix:hover{
     cursor: pointer;
+  }
+
+  .pre-selected-prefix{
+    border-radius: 5px;
+    border: 1px $color-cool-blue solid;
+    padding: 0 3px;
   }
 
   .disabled-prefix{
@@ -27,15 +33,14 @@
     display: inline-block;
   }
 
-  .normal-vertical-line, .current-vertical-line{
+  .normal-vertical-line, .current-vertical-line, .edge-current-vertical-line{
     position: absolute;
-    border-left: 1px solid grey;
-
-    left: 17%;
+    border-left: 1.5px solid grey;
+    left: 18%;
   }
 
   .normal-vertical-line{
-    height: 8px;
+    height: 9px;
     width: 0;
     bottom: -20px;
   }
@@ -44,6 +49,12 @@
     height: 8px;
     width: 0;
     bottom: -12px;
+  }
+
+  .edge-current-vertical-line{
+    height: 17px;
+    width: 0;
+    bottom: -20px;
   }
 
 }
