- Mock data for import/roles and integrations to IAM API library

--- a/src/app/authentication/profile/migrations/migrations.component.html
+++ b/src/app/authentication/profile/migrations/migrations.component.html
@@ -41,7 +41,10 @@
       <tr class="group">
         <td class="text-right">
           <h1>CFDA.gov</h1>
-          <div class="key">Jane Smith</div>
+          <div class="key">
+            <span class="fa fa-user"></span>
+            <span>Jane Smith</span>
+          </div>
         </td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
