--- a/src/styles/components/alert/_item.scss
+++ b/src/styles/components/alert/_item.scss
@@ -11,19 +11,21 @@
   }
 
   // The next three group fixes the insanely large checkboxes in the USA design library
-  input-group {
+  .input-group {
     display: inline-block;
+
+    label {
+      display: inline-block;
+      line-height: 44px;
+      margin-top: 8px;
+    }
+
+    input[type=checkbox] {
+      pointer-events: none;
+    }
   }
 
-  label {
-    display: inline-block;
-    line-height: 44px;
-    margin-top: 8px;
-  }
 
-  input[type=checkbox] {
-    pointer-events: none;
-  }
 }
 
 alert-item {
