--- a/src/app/user-directory/user-directory.template.html
+++ b/src/app/user-directory/user-directory.template.html
@@ -1,4 +1,27 @@
 <div class="usa-grid user-directory-page">
+  <div class="usa-grid-full">
+    <sam-alphabet-selector [sortLabel]="'LastName'" [currentPage]="alphabetSelectorPageConfig.currentPage" [alphabetSelectorService]="userDirService"(resultUpdate)="updateResultList($event)" (paginationUpdate)="OnPaginationUpdate($event)"></sam-alphabet-selector>
+    <div class="usa-width-one-whole" *ngFor="let resultItem of resultList">
+      <h2 class="user-name m_T-2x m_B-1x"><a href="#">{{resultItem.LastName}}, {{resultItem.FirstName}}</a></h2>
+      <div class="usa-width-one-whole">
+        <div class="usa-width-two-thirds">
+          <span>Email:<a>Adams.jones@gsa.gov</a></span><br>
+          <span class="m_T-0 m_B-1x">Organization: General Services Administration(GSA)</span>
+        </div>
+        <div class="usa-width-one-thirds">
+          <span>Last Logged: 12/31/2016</span>
+
+        </div>
+      </div>
+      <hr>
+    </div>
+
+    <div class="usa-width-one-whole">
+      <samPagination [currentPage]="alphabetSelectorPageConfig.currentPage" [totalPages]="alphabetSelectorPageConfig.totalPages" (pageChange)="onAlphabetSelectorPageChange($event)"></samPagination>
+    </div>
+
+  </div>
+
   <label>Organization Id:</label>
   <input type="number" [(ngModel)]="orgId">
   <hr>
