--- a/src/styles/components/_alphabet-selector.scss
+++ b/src/styles/components/_alphabet-selector.scss
@@ -5,7 +5,7 @@
     background-color: $color-cool-blue;
     border-radius: 3px;
     text-align: center;
-    padding: 0 3px;
+    padding: 1px 2px;
   }
 
   .current-prefix:hover{
@@ -19,16 +19,19 @@
   .pre-selected-prefix{
     border-radius: 5px;
     border: 1px $color-cool-blue solid;
-    padding: 0 3px;
+    padding: 1px 2px;
   }
 
   .disabled-prefix{
     color:$color-gray-cool-light;
     pointer-events: none;
     text-decoration: none;
+
+
   }
 
   .prefix-span{
+    font-size: 0.9em;
     width: 35px;
     display: inline-block;
   }
@@ -36,7 +39,7 @@
   .normal-vertical-line, .current-vertical-line, .edge-current-vertical-line{
     position: absolute;
     border-left: 1.5px solid grey;
-    left: 18%;
+    left: 17.5%;
   }
 
   .normal-vertical-line{
