Entity Object View and Individual Exclusion code.

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -35,6 +35,8 @@
 @import 'components/tabs';
 @import 'components/modal';
 
+@import 'pages/entity-object-view';
+@import 'pages/exclusion';
 @import 'pages/assistance-listing';
 @import 'pages/help';
 @import 'pages/home';
